--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ p {
 }
 
 a {
-  color: var(--tertiary-color);
+  color: #60530b;
   text-decoration: underline;
 }
 
@@ -240,7 +240,7 @@ thead {
 }
 
 thead th {
-  padding: 0.5rem;
+  padding: 0.05rem;
   white-space: nowrap;
   background: var(--primary-color);
   color: white;
@@ -254,7 +254,7 @@ thead th {
 }
 
 tbody td {
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 /* UPLOAD */
