--- a/css/export.css
+++ b/css/export.css
@@ -1,12 +1,16 @@
 .export {
-  display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+
+.export__main {
+  width: 100%;
 }
 
 .export__map {
-  width: calc(60% - 1rem);
-  height: 100vh;
-  border: 1px solid black;
+  width: 100%;
+  height: 100%;
 }
 
 .export__map-viewer {
@@ -14,8 +18,34 @@
   height: 100%;
 }
 
-.export__extras {
-  width: 40%;
+.export__nav {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+}
+
+.export__menu {
+  width: 500px;
+  max-width: 100%;
+  height: 100vh;
+  padding: 6rem 1rem 1rem;
+  border-left: 2px solid var(--secondary-color);
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  transform: translateX(500px);
+  overflow: scroll;
+  background: white;
+  transition: all 0.2s ease-out;
+}
+
+.export__menu--open {
+  transform: translateX(0);
 }
 
 .export__mapper {
