Improvements for export file
- Remove Go Back button as it has no context for standalone file
- Add CSS to fix the Zoom controls

--- a/css/export.css
+++ b/css/export.css
@@ -20,12 +20,12 @@
 
 .export__nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 2;
-  width: 100%;
+  width: auto;
 }
 
 .export__menu {
