--- a/css/export.css
+++ b/css/export.css
@@ -20,32 +20,72 @@
 
 .export__nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   right: 0;
   z-index: 2;
-  width: auto;
+  width: 100%;
 }
 
-.export__menu {
-  width: 700px;
+.export__panel{
   max-width: 100%;
   height: 100vh;
-  padding: 6rem 1rem 1rem;
   border-left: 2px solid var(--secondary-color);
   position: fixed;
   top: 0;
-  right: 0;
   z-index: 1;
-  transform: translateX(700px);
-  overflow: scroll;
   background: white;
   transition: all 0.2s ease-out;
 }
 
-.export__menu--open {
+.export__panel .button--toggle{
+  position: absolute;
+  top: 0;
+}
+
+.export__panel-scroll-content{
+  height: 100vh;
+  padding: 1rem;
+  overflow: scroll;
+}
+
+.info-panel{
+  left: 0;
+  transform: translateX(-400px);
+}
+.info-panel .export__panel-scroll-content{
+  width: 400px;
+}
+.info-panel > .button--toggle{
+  right: 0;
+  transform: translateX(100%)
+}
+
+.edit-panel{
+  right: 0;
+  transform: translateX(700px);
+}
+.edit-panel .export__panel-scroll-content{
+  width: 700px;
+}
+.edit-panel > .button--toggle{
+  left: 0;
+  transform: translateX(-100%);
+}
+
+.export__panel--open {
   transform: translateX(0);
+}
+.export__panel--open .button--toggle{
+  border: 2px solid var(--secondary-color);
+  color: var(--secondary-color);
+}
+
+.info-panel__player-info{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .export__mapper {
