--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,8 @@ input[type="text"] {
   width: 100%;
   padding: 1rem 0.75rem;
   background: white;
-  border: 0;
+  border: 1px solid #AAAAAA;
   border-radius: var(--border-radius);
-  outline: 2px solid transparent;
   transition: all 0.1s ease-out;
 }
 
@@ -134,7 +133,6 @@ input[type="checkbox"] {
 }
 
 fieldset {
-  border: none;
   margin: 0;
   padding: 0;
 }
@@ -301,6 +299,7 @@ tbody td {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  border: 1px;
 }
 
 .upload-form__background fieldset div {
