Start using SVG groups

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -346,3 +346,11 @@ tbody td {
   text-decoration: none;
   cursor: pointer;
 }
+
+.trees_default {
+  display: none;
+}
+
+.trees_user {
+  display: none;
+}
