--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -347,10 +347,10 @@ tbody td {
   cursor: pointer;
 }
 
-.trees_default {
+.display_hide {
   display: none;
 }
 
-.trees_user {
-  display: none;
+.display_show {
+  display: block;
 }
