--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -374,3 +374,15 @@ tbody td {
 #saveFiles th {
   background-color: beige;
 }
+
+.cart_colors {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    ". . . ."
+    ". . . ."
+    ". . . .";
+  align-items: flex-end;
+}
