enabled find and recover missions, made zoomable positions work , store last position in cookies, modified reset button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,7 +256,7 @@ thead tr th {
   background: var(--primary-color);
   color: white;
   border-bottom: 1px solid var(--secondary-color);
-  min-width: 100px;
+  /* min-width: 100px; */
 }
 
 @media only screen and (min-width: 1250px) {
